# paperless-generic-file-parser

./: README.md  default.nix  pyproject.toml
paperless_generic_file_parser/: apps.py  common.py  legacy.py  parser.py
