[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperless-generic-file-parser"
version = "0.1.0"
description = "Generic file archiver parser plugin for Paperless-ngx"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow",
]

[project.entry-points."paperless_ngx.parsers"]
generic_file_parser = "paperless_generic_file_parser.parser:GenericFileParser"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["paperless_generic_file_parser*"]
